Bump version to 2.1.0 and migrate to Java 21 virtual threads
Why: Upgrade build target to Java 21 so server/client thread pools
can use virtual threads instead of cached daemon thread pools, and
align module/project version accordingly.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>